@@ -1,17 +1,3 @@
-setMethodS3("downloadPackagePatch", "default", function(pkgName, version=NULL, url=NULL, apply=TRUE, rootPath="~/.Rpatches", pkgVer=NULL, ..., verbose=FALSE) {
-  .Defunct(msg="downloadPackagePatch() is deprecated without alternatives.");
-}, protected=TRUE, deprecated=TRUE)
-
-setMethodS3("patchPackage", "default", function(pkgName, paths=c("~/.Rpatches/", "patches/"), deleteOld=TRUE, verbose=FALSE, ...) {
-  .Defunct(msg="patchPackage() is deprecated without alternatives.");
-}, protected=TRUE, deprecated=TRUE)
-
-
-setMethodS3("patch", "AromaPackage", function(this, ..., verbose=FALSE) {
-  .Defunct(msg="patch() for AromaPackage is deprecated without alternatives.");
-}, protected=TRUE, deprecated=TRUE)
-
-
 # 2008-05-16
 # o Removed deprecated readData().
 setMethodS3("readData", "SampleAnnotationFile", function(this, ...) {
